syntax = "proto3";
option go_package = "blog/;blog";
package blog;

service BlogApi {
    rpc CreateBlog (CreateBlogReq) returns (CreateBlogRes){};
    rpc FindBlog (FindBlogReq) returns (stream FindBlogRes){};
};

message Blog {
    int32 id = 1;
    int32 author_id = 2;
    string title = 3;
    string content = 4;
    string created_at = 5;
}

message FindBlogReq {}
message FindBlogRes {
    Blog result = 1;
}

message CreateBlogReq {
    Blog blog = 1;
}
message CreateBlogRes {
    Blog result = 1;    // will have a id
}



